# wiki-arch

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
docs/: ARCHITECTURE.md  COMPARISON.md  PHILOSOPHY.md  QUICKSTART.md
docs/images/: architecture.txt
examples/: event-store.md  graph-queries.md  state-v3.example.json  wiki_graph.py
