[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "wiki-arch"
version = "0.1.0"
description = "Wiki as an external cortex — persistent, evolving knowledge for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
]

[project.urls]
Homepage = "https://github.com/greyfog-labs/wiki-arch"
Documentation = "https://github.com/greyfog-labs/wiki-arch/tree/main/docs"
